--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@
                 <!-- 模块4 -->
                 <div class="section part4">
                     <div class="part4-cont">
-                        <div class="p4swiper">
-                            <div class="swiper-wrapper">
+                        <div class="p4-outer">
+                            <div class="p4swiper">
+                                <div class="swiper-wrapper">
+                                </div>
                             </div>
                         </div>
                     </div>
