--- a/index.html
+++ b/index.html
@@ -148,13 +148,16 @@
                     Hobbies
                 </div>
             </div>
+            <div class="footer">
+                
+            </div>
 
             <!-- 弹窗区域 -->
             <div class="pop-model" id="pop-story">
                 <div class="pop-story-cont">
                     <!-- <h3 class="title"></h3>
                     <p class="content"></p> -->
-                    <!-- <a class="pop-close" href="javascript:closePop('pop-story')">×</a> -->
+                    <a class="pop-close" href="javascript:closePop('pop-story')">×</a>
                 </div>
             </div>
 
