--- a/index.html
+++ b/index.html
@@ -145,7 +145,13 @@
 
                 <!-- 模块5 -->
                 <div class="section part5">
-                    Hobbies
+                    <div class="part5-cont">
+                        <div class="part5-cont-item left-model"></div>
+                        <div class="part5-cont-item left-model"></div>
+                        <div class="part5-cont-item btom-model"></div>
+                        <div class="part5-cont-item btom-model"></div>
+                        <div class="part5-cont-item cont-model"></div>
+                    </div>
                 </div>
             </div>
             <div class="footer">
