--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                                 <div class="swiper-wrapper">
                                 </div>
                             </div>
+                            <div class="p4swiper-pagination"></div>
                         </div>
                     </div>
                 </div>
@@ -146,8 +147,20 @@
                 <!-- 模块5 -->
                 <div class="section part5">
                     <div class="part5-cont">
-                        <div class="part5-cont-item left-model"></div>
-                        <div class="part5-cont-item left-model"></div>
+                        <div class="part5-cont-item left-model">
+                            <div class="img-box" style="background-image: url(./images/p5_img1.png);">
+                                <div class="sideslip">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="part5-cont-item left-model">
+                            <div class="img-box" style="background-image: url(./images/p5_img2.png);">
+                                <div class="sideslip">
+                                    
+                                </div>
+                            </div>
+                        </div>
                         <div class="part5-cont-item btom-model"></div>
                         <div class="part5-cont-item btom-model"></div>
                         <div class="part5-cont-item cont-model"></div>
