--- a/index.html
+++ b/index.html
@@ -161,8 +161,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="part5-cont-item btom-model"></div>
-                        <div class="part5-cont-item btom-model"></div>
+                        <div class="part5-cont-item btom-model">
+                            <div class="img-box" style="background-image: url(./images/p5_img3.png);">
+                                <div class="sideslip">
+                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="part5-cont-item btom-model">
+                            <div class="img-box" style="background-image: url(./images/p5_img4.png);">
+                                <div class="sideslip">
+                                    
+                                </div>
+                            </div>
+                        </div>
                         <div class="part5-cont-item cont-model"></div>
                     </div>
                 </div>
