--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         <h1 class="hide-text">Cafe_Shop - 咖啡の个人简历网站</h1>
         <div class="wrap">
             <div class="content" id="content">
+                <!-- 模块1 KV -->
                 <div class="section part1">
                     <div class="hide-text">main</div>
                 </div>
 
-                <!-- 模块2 -->
+                <!-- 模块2 简历 -->
                 <div class="section part2">
                     <div class="part2-cont">
                         <h1 class="part2-title">Information</h1>
@@ -113,11 +114,12 @@
                     </div>
                 </div>
 
-                <!-- 模块3 -->
+                <!-- 模块3 技术栈 -->
                 <div class="section part3">
                     <div class="part3-cont">
                         <h1 class="part3-title">TechnologyStack</h1>
                         <span class="part3-icon-1"></span>
+                        <span class="part3-icon-2"></span>
                         <div class="part3-list">
                             <!-- <div class="part3-item">
                                 <span class="tips">JAVA</span>
@@ -131,7 +133,7 @@
                     </div>
                 </div>
 
-                <!-- 模块4 -->
+                <!-- 模块4 经历 -->
                 <div class="section part4">
                     <div class="part4-cont">
                         <div class="p4-outer">
@@ -144,7 +146,7 @@
                     </div>
                 </div>
 
-                <!-- 模块5 -->
+                <!-- 模块5 补充 -->
                 <div class="section part5">
                     <div class="part5-cont">
                         <div class="part5-cont-item left-model">
