--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 <!-- 模块2 简历 -->
                 <div class="section part2">
                     <div class="part2-cont">
+                        <span class="part2-icon1"></span>
+                        <span class="part2-icon2"></span>
                         <h1 class="part2-title">Information</h1>
                         <div class="part2-left">
                             <div class="head-cover"></div>
