--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
                 <!-- 模块1 KV -->
                 <div class="section part1">
                     <div class="hide-text">main</div>
+                    <div class="part1-cont">
+                        <div class="title">Cafe</div>
+                        <div class="sub-title">一个喜欢荒木飞吕彦和硬核画风的码农</div>
+                        <div class="kv-cent">
+                            <p class="text">人，只有在放弃战斗的时候才算输，只要坚持战斗，就还没输！</p>
+                            <p class="about">——<span class="about-name">《进击的巨人》</span></p>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- 模块2 简历 -->
