--- a/index.html
+++ b/index.html
@@ -222,7 +222,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="part5-cont-item cont-model"></div>
+                        <div class="part5-cont-item cont-model">
+                            <div class="title">ABOUT</div>
+                        </div>
                     </div>
                 </div>
             </div>
