--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <ul class="content">
                                 <li>Github: <a href="https://github.com/CoffeeKiller1/Cafe_Shop">https://github.com/CoffeeKiller1/Cafe_Shop</a></li>
                                 <li>Gitee: <a href="https://gitee.com/coffeekiller002/coffee_-shop">https://gitee.com/coffeekiller002/coffee_-shop</a></li>
-                                <li>Producer: Coffee_Killer</li>
+                                <li>Producer: CoffeeKiller</li>
                                 <li>Project Creation Time: 2023-06-28</li>
                                 <li>Copyright © 2023 CoffeeKiller, All rights reserved</li>
                             </ul>
