--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                         <div class="part5-cont-item left-model">
                             <div class="img-box" style="background-image: url(./images/p5_img1.png);">
                                 <div class="sideslip">
-
+                                    <h1>说明</h1>
+                                    <!-- <h2>about</h2> -->
                                 </div>
                             </div>
                         </div>
@@ -192,11 +193,29 @@
                         <div class="part5-cont-item cont-model">
                             <div class="title">ABOUT</div>
                             <ul class="content">
-                                <li>Github: <a href="https://github.com/CoffeeKiller1/Cafe_Shop">https://github.com/CoffeeKiller1/Cafe_Shop</a></li>
-                                <li>Gitee: <a href="https://gitee.com/coffeekiller002/coffee_-shop">https://gitee.com/coffeekiller002/coffee_-shop</a></li>
-                                <li>Producer: CoffeeKiller</li>
-                                <li>Project Creation Time: 2023-06-28</li>
-                                <li>Copyright © 2023 CoffeeKiller, All rights reserved</li>
+                                <li>
+                                    <span>Bilibili Link</span>
+                                    <span><a href="https://space.bilibili.com/248826433">https://space.bilibili.com/248826433</a></span>
+                                </li>
+                                <li>
+                                    <span>Github</span>
+                                    <span><a href="https://github.com/CoffeeKiller1/Cafe_Shop">https://github.com/CoffeeKiller1/Cafe_Shop</a></span>
+                                </li>
+                                <li>
+                                    <span>Gitee</span>
+                                    <span><a href="https://gitee.com/coffeekiller002/coffee_-shop">https://gitee.com/coffeekiller002/coffee_-shop</a></span>
+                                </li>
+                                <li>
+                                    <span>Producer</span>
+                                    <span>Coffee(FengmStudio)</span>
+                                </li>
+                                <li>
+                                    <span>Project Creation Time</span>
+                                    <span>2023-06-28</span>
+                                </li>
+                                <li>
+                                    Copyright © 2023 FengmStudio CoffeeKiller, All rights reserved
+                                </li>
                             </ul>
                         </div>
                     </div>
