--- a/index.html
+++ b/index.html
@@ -213,9 +213,8 @@
                                     <span>Project Creation Time</span>
                                     <span>2023-06-28</span>
                                 </li>
-                                <li>
-                                    Copyright © 2023 FengmStudio CoffeeKiller, All rights reserved
-                                </li>
+                                <li class="content-footer">Copyright © 2023 FengmStudio CoffeeKiller, All rights reserved</li>
+                                <li class="content-footer">图片来源于网络,如有侵权请告知删除</li>
                             </ul>
                         </div>
                     </div>
