add copyText function

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                     <span>手机号</span>
                                 </div>
                                 <div>
-                                    <p>1733******81</p>
+                                    <p class="copy-allowed" data-clipboard-text="1733******81">1733******81</p>
                                 </div>
                             </div>
                             <div class="qq-num sev-thirty-box">
@@ -93,7 +93,7 @@
                                     <span >常用邮箱</span>
                                 </div>
                                 <div>
-                                    <p onclick="copyText(this)">zai******@163.com</p>
+                                    <p >zai******@163.com</p>
                                 </div>
                             </div>
                         </div>
@@ -237,6 +237,7 @@
     <script src="./js/jquery.js"></script>
     <script src="./js/jquery.fullpage.js"></script>
     <script src="./js/swiper8.min.js"></script>
+    <script src="./js/clipboard.min.js"></script>
     <script src="./js/index.js"></script>
     <!-- <script src="./js/resize.js"></script> -->
 
