add message function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 		<!-- 外部CSS -->
         <link rel="stylesheet" href="./css/swiper8.min.css">
+        <link rel="stylesheet" href="./css/message.min.css">
 		<link rel="stylesheet" href="./css/common.css">
 		<link rel="stylesheet" href="./css/font.css">
 		<link rel="stylesheet" href="./css/index.css" media="screen and (min-device-width: 1025px)">
@@ -233,9 +234,10 @@
 	</body>
 	
     <!-- 外链JS -->
+    <script src="./js/message.min.js"></script>
     <script src="./js/TweetMax.min.js"></script>
-    <script src="./js/jquery.js"></script>
-    <script src="./js/jquery.fullpage.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery.fullpage.min.js"></script>
     <script src="./js/swiper8.min.js"></script>
     <script src="./js/clipboard.min.js"></script>
     <script src="./js/index.js"></script>
