--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     <span>微信号</span>
                                 </div>
                                 <div>
-                                    <p>Coffee2113</p>
+                                    <p class="copy-allowed" data-clipboard-text="Coffee2113">Coffee2113</p>
                                 </div>
                             </div>
                             <div class="phone-num sev-thirty-box">
@@ -86,7 +86,7 @@
                                     <span>QQ</span>
                                 </div>
                                 <div>
-                                    <p>1691810090</p>
+                                    <p class="copy-allowed" data-clipboard-text="1691810090">1691810090</p>
                                 </div>
                             </div>
                             <div class="email sev-thirty-box">
@@ -94,7 +94,7 @@
                                     <span >常用邮箱</span>
                                 </div>
                                 <div>
-                                    <p >zai******@163.com</p>
+                                    <p class="copy-allowed" data-clipboard-text="zaiqiao2481@163.com">zai******@163.com</p>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                             </div>
                             <div class="sev-thirty-box work-exp">
                                 <div>工作经验</div>
-                                <div>4月</div>
+                                <div>6月</div>
                             </div>
                             <div class="sev-thirty-box current-jobs">
                                 <div>当前职业</div>
