update files structure

--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
 	</body>
 	
     <!-- 外链JS -->
-    <script src="./js/message.min.js"></script>
-    <script src="./js/TweetMax.min.js"></script>
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/jquery.fullpage.min.js"></script>
-    <script src="./js/swiper8.min.js"></script>
-    <script src="./js/clipboard.min.js"></script>
+    <script src="./js/libs/message.min.js"></script>
+    <script src="./js/libs/TweetMax.min.js"></script>
+    <script src="./js/libs/jquery.min.js"></script>
+    <script src="./js/libs/jquery.fullpage.min.js"></script>
+    <script src="./js/libs/swiper8.min.js"></script>
+    <script src="./js/libs/clipboard.min.js"></script>
     <script src="./js/initialize.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/context.js"></script>
