--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 	
     <!-- 外链JS -->
     <script src="./js/libs/message.min.js"></script>
-    <script src="./js/libs/TweetMax.min.js"></script>
+    <script src="./js/libs/gsap.min.js"></script>
     <script src="./js/libs/jquery.min.js"></script>
     <script src="./js/libs/jquery.fullpage.min.js"></script>
     <script src="./js/libs/swiper8.min.js"></script>
