--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
 
         <div class="loading-cont">
             <div class="loading-text">
-                资源装载中: 已加载<span class="count">1</span>个资源, 当前加载<span class="type">other</span>类型资源
+                资源装载中......<br>
+                已加载<span class="count">1</span>个资源, 当前加载<span class="type">other</span>类型资源
             </div>
         </div>
         
