--- a/index.html
+++ b/index.html
@@ -57,58 +57,36 @@
                         <span class="part2-icon2"></span>
                         <h1 class="part2-title">Information</h1>
                         <div class="part2-left">
-                            <div class="head-cover"></div>
-                            <div class="nickname sev-thirty-box">
-                                <div>
-                                    <span>常用昵称</span>
-                                </div>
+                            <div class="sev-thirty-box head-cover"></div>
+                            <div class="sev-thirty-box nickname">
+                                <div><span>常用昵称</span></div>
                                 <div>
                                     <p>咖啡</p>
                                     <p>咖啡Killer</p>
                                     <p>Coffee_Killer</p>
                                 </div>
                             </div>
-                            <div class="wx-num sev-thirty-box">
-                                <div>
-                                    <span>微信号</span>
-                                </div>
-                                <div>
-                                    <p class="copy-allowed" data-clipboard-text="Coffee2113">Coffee2113</p>
-                                </div>
+                            <div class="sev-thirty-box wx-num">
+                                <div><span>微信号</span></div>
+                                <div><p class="copy-allowed" data-clipboard-text="Coffee2113">Coffee2113</p></div>
                             </div>
-                            <div class="phone-num sev-thirty-box">
-                                <div>
-                                    <span>手机号</span>
-                                </div>
-                                <div>
-                                    <p class="copy-allowed" data-clipboard-text="1733******81">1733******81</p>
-                                </div>
+                            <div class="sev-thirty-box phone-num">
+                                <div><span>手机号</span></div>
+                                <div><p class="copy-allowed" data-clipboard-text="1733******81">1733******81</p></div>
                             </div>
-                            <div class="qq-num sev-thirty-box">
-                                <div>
-                                    <span>QQ</span>
-                                </div>
-                                <div>
-                                    <p class="copy-allowed" data-clipboard-text="1691810090">1691810090</p>
-                                </div>
+                            <div class="sev-thirty-box qq-num">
+                                <div><span>QQ</span></div>
+                                <div><p class="copy-allowed" data-clipboard-text="1691810090">1691810090</p></div>
                             </div>
-                            <div class="email sev-thirty-box">
-                                <div>
-                                    <span >常用邮箱</span>
-                                </div>
-                                <div>
-                                    <p class="copy-allowed" data-clipboard-text="zaiqiao2481@163.com">zai******@163.com</p>
-                                </div>
+                            <div class="sev-thirty-box email">
+                                <div><span>常用邮箱</span></div>
+                                <div><p class="copy-allowed" data-clipboard-text="zaiqiao2481@163.com">zai******@163.com</p></div>
                             </div>
                         </div>
                         <div class="part2-right">
-                            <div class="address sev-thirty-box">
-                                <div>
-                                    <span>现居住地</span>
-                                </div>
-                                <div>
-                                    <p>广东 · 深圳</p>
-                                </div>
+                            <div class="sev-thirty-box address">
+                                <div><span>现居住地</span></div>
+                                <div><p>广东 · 深圳</p></div>
                             </div>
                             <div class="sev-thirty-box work-exp">
                                 <div>工作经验</div>
@@ -129,7 +107,7 @@
                         </div>
 
                         <!--<script id="intro_info" type="text/html">
-
+                                    
                         </script>-->
 
                     </div>
