--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
 		<meta name="Keywords" content="个人网站,咖啡厅,Coffee_Shop,Cafe_shop,个人简历,独立网站,Jquery.fullpage" />
 		<title>Cafe_Shop - 咖啡の个人简历网站</title>
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-		<!-- 外部CSS -->
-        <link rel="stylesheet" href="./css/swiper8.min.css">
-        <link rel="stylesheet" href="./css/message.min.css">
+
+        <!-- CSS External Link -->
+        <!-- Swiper             | home link : https://swiper.com.cn/ -->
+        <!-- Jquery.fullPage    | home link : https://github.com/alvarotrigo/fullpage.js -->
+        <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/Swiper/8.3.0/swiper-bundle.css">
+        <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/fullPage.js/3.0.9/fullpage.css">
+
+        <!-- CSS Project Link -->
+        <link rel="stylesheet" href="./css/message.css">
 		<link rel="stylesheet" href="./css/common.css">
 		<link rel="stylesheet" href="./css/index.css" media="screen and (min-device-width: 1025px)">
         <link rel="stylesheet" href="./css/index-m.css" media="screen and (max-device-width: 1024px)">
-        <link rel="stylesheet" href="./css/jquery.fullpage.css">
+        
 	</head>
 	
 	<body>
@@ -216,8 +222,6 @@
     </script>
 
     <!-- 外链JS -->
-    <script src="./js/libs/message.min.js"></script>
-    <!-- <script src="./js/libs/TweetMax.min.js"></script> -->
     <script src="./js/libs/art-template.min.js"></script>
     <script src="./js/libs/gsap.min.js"></script>
     <script src="./js/libs/jquery.min.js"></script>
@@ -225,7 +229,9 @@
     <script src="./js/libs/jquery-easing.min.js"></script>
     <script src="./js/libs/swiper8.min.js"></script>
     <script src="./js/libs/clipboard.min.js"></script>
-    <!-- 项目JS -->
+
+    <!-- Project JS Link -->
+    <script src="./js/message.min.js"></script>
     <script src="./js/initialize.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/context.js"></script>
