--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- CreateTime: 2023-5-23 23:26  |  Team: Fengm Studio  |  Creator: Coffee_Killer -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 	<head>
@@ -36,14 +35,22 @@
                 <div class="section part1">
                     <div class="part-outer">
                         <div class="part-inner">
-                            <h1 class="part1-title">CaFe</h1>
+                            <h1 class="part1-title">Hello World!</h1>
+                            <div class="part1-line"></div>
+                            <h2 class="part1-desc">嗨~ 你好呀！欢迎来到我的咖啡屋<span>(Cafe)</span>，
+                                <br>我是Coffee，正在努力成为一个有趣的全栈开发工程师。</h2>
+                            <h3 class="part1-small-text">
+                                 <p class="head-text"></p>
+                            </h3>
                         </div>
                     </div>
                 </div>
 
                 <div class="section part2">
                     <div class="part-outer">
-                        <div class="part-inner"></div>
+                        <div class="part-inner">
+
+                        </div>
                     </div>
                 </div>
 
@@ -113,20 +120,18 @@
     </script>
 
     <!-- 外链JS -->
-    <script src="./js/libs/art-template.min.js"></script>
-    <script src="./js/libs/gsap.min.js"></script>
     <script src="./js/libs/jquery.min.js"></script>
+    <script src="./js/libs/typed.min.js"></script>
     <script src="./js/libs/jquery.fullpage.min.js"></script>
     <script src="./js/libs/jquery-easing.min.js"></script>
-    <script src="./js/libs/swiper8.min.js"></script>
-    <script src="./js/libs/clipboard.min.js"></script>
+    <script src="./js/libs/message.min.js"></script>
 
     <!-- Project JS Link -->
-    <script src="./js/message.min.js"></script>
-
+    <script src="./js/data.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/context.js"></script>
 
 </html>
+<!-- CreateTime: 2023-5-23 23:26  |  Team: Fengm Studio  |  Creator: Coffee_Killer -->
 <!-- Declaration : 部分素材来源网络，侵删 -->
-<!-- Version 2.1  RemakeTime: 2023-7-7 23:07:13 -->
+<!-- Version 3.0  RemakeTime: 2023-12-14 21:40:08 -->
