feat: update part2

--- a/index.html
+++ b/index.html
@@ -49,7 +49,16 @@
                 <div class="section part2">
                     <div class="part-outer">
                         <div class="part-inner">
+                            <div class="part2-left">
+                                <div class="user-cover">
+                                    <img src="./images/cover.jpg" alt="">
+                                </div>
+                                <div class="user-name">Cafe Killer</div>
+                            </div>
+                            <div class="part2-line"></div>
+                            <div class="part2-right">
 
+                            </div>
                         </div>
                     </div>
                 </div>
