feat: update part2

--- a/index.html
+++ b/index.html
@@ -53,11 +53,24 @@
                                 <div class="user-cover">
                                     <img src="./images/cover.jpg" alt="">
                                 </div>
-                                <div class="user-name">Cafe Killer</div>
+                                <div class="user-info">
+                                    <div class="user-item user-name"> <span>昵称 :</span> 咖啡</div>
+                                    <div class="user-item user-age"> <span>年龄 :</span> 20</div>
+                                    <div class="user-item user-work"> <span>工作年限 :</span> 7 month</div>
+                                    <div class="user-item user-occ"> <span>当前职位 :</span> 前端开发</div>
+                                    <div class="user-item user-occ"> <span>现居城市 : </span> 广东深圳</div>
+                                </div>
                             </div>
                             <div class="part2-line"></div>
                             <div class="part2-right">
+                                <div class="detail-list">
+                                    <div class="detail-item wx">微信号: Coffee2333</div>
+                                    <div class="detail-item qq">QQ号: 1691810090</div>
+                                    <div class="detail-item email">邮箱: zaiqiao2481@163.com</div>
+                                    <div class="detail-item phone">手机号: 17336668888</div>
 
+                                    <div class="detail-item school">教育背景: 潮汕职业技术学院</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -75,11 +88,6 @@
                     </div>
                 </div>
 
-                <div class="section part5">
-                    <div class="part-outer">
-                        <div class="part-inner"></div>
-                    </div>
-                </div>
             </div>
 
             <!-- 弹窗区域 -->
