feat: update part2

--- a/index.html
+++ b/index.html
@@ -63,13 +63,41 @@
                             </div>
                             <div class="part2-line"></div>
                             <div class="part2-right">
+<!--                                <h1 class="part2-title">basic info</h1>-->
                                 <div class="detail-list">
-                                    <div class="detail-item wx">微信号: Coffee2333</div>
-                                    <div class="detail-item qq">QQ号: 1691810090</div>
-                                    <div class="detail-item email">邮箱: zaiqiao2481@163.com</div>
-                                    <div class="detail-item phone">手机号: 17336668888</div>
+                                    <div class="detail-item wx">
+                                        <span class="text-key">微信号 :</span>
+                                        <div class="center-mask"></div>
+                                        <p class="text-value">Coffee2333</p>
+                                    </div>
+                                    <div class="detail-item qq">
+                                        <span class="text-key">Q Q号 :</span>
+                                        <div class="center-mask"></div>
+                                        <p class="text-value">1691810090</p>
+                                    </div>
+                                    <div class="detail-item email">
+                                        <span class="text-key">邮箱 :</span>
+                                        <div class="center-mask"></div>
+                                        <p class="text-value">zaiqiao2481@163.com</p>
+                                    </div>
+                                    <div class="detail-item phone">
+                                        <span class="text-key">手机号 :</span>
+                                        <div class="center-mask"></div>
+                                        <p class="text-value">17336668888</p>
+                                    </div>
+                                    <div class="detail-item lang">
+                                        <span class="text-key">擅长语言 :</span>
+                                        <div class="center-mask"></div>
+                                        <p class="text-value">Java、JavaScript、Python</p>
+                                    </div>
+                                    <div class="detail-item school">
+                                        <span class="text-key">教育背景 :</span>
+                                        <div class="center-mask"></div>
+                                        <p class="text-value">2023届潮汕职业技术学院(专科)</p>
+                                    </div>
+                                </div>
+                                <div class="self-intro">
 
-                                    <div class="detail-item school">教育背景: 潮汕职业技术学院</div>
                                 </div>
                             </div>
                         </div>
